further enhance list menu

--- a/web/v2/ui/shared/nav.templ
+++ b/web/v2/ui/shared/nav.templ
@@ -8,39 +8,41 @@ templ Nav() {
 			</a>
 		</h1>
 		<div class="flex items-center gap-4 sm:gap-6 xl:gap-8">
-			<div class="hidden xl:block">
-				@ListMenu()
-			</div>
-			<button class="rounded-full transition hover:bg-sky-800 xl:p-2">
-				@IconSm("bell")
-			</button>
-			<button class="xl:hidden">
-				@BurgerMenu()
-			</button>
+			@ListMenu()
+			@NotificationBell()
+			@BurgerMenu()
 		</div>
 	</nav>
 }
 
+templ NotificationBell() {
+	<button class="rounded-full transition hover:bg-sky-800 xl:p-2">
+		@IconSm("bell")
+	</button>
+}
+
 templ BurgerMenu() {
-	@Icon("menu")
+	<button class="xl:hidden">
+		@Icon("menu")
+	</button>
 }
 
 templ ListMenu() {
-	<ul hx-boost="true" class="flex gap-2">
+	<ul hx-boost="true" class="hidden gap-2 xl:flex">
 		@MenuItem("/entities") {
 			@IconSm("users")
 			<span>Entidades</span>
 		}
-		@DropDownMenu("file-text", "Notas Fiscais") {
-			@DropDownMenuItem("/invoices") {
+		@SubMenu("file-text", "Notas Fiscais") {
+			@SubMenuItem("/invoices") {
 				@IconSm("plus-circle")
 				<span>Emitir</span>
 			}
-			@DropDownMenuItem("/invoices/cancel") {
+			@SubMenuItem("/invoices/cancel") {
 				@IconSm("slash")
 				<span>Cancelar</span>
 			}
-			@DropDownMenuItem("/invoices/print") {
+			@SubMenuItem("/invoices/print") {
 				@IconSm("printer")
 				<span>Imprimir</span>
 			}
@@ -64,7 +66,7 @@ templ MenuItem(url string) {
 	</a>
 }
 
-templ DropDownMenu(labelIcon, labelText string) {
+templ SubMenu(labelIcon, labelText string) {
 	<li class="group relative w-16 cursor-pointer rounded-t hover:bg-sky-800 md:w-auto">
 		<div class="flex items-center gap-2 px-2 py-1">
 			@IconSm(labelIcon)
@@ -76,7 +78,7 @@ templ DropDownMenu(labelIcon, labelText string) {
 	</li>
 }
 
-templ DropDownMenuItem(url string) {
+templ SubMenuItem(url string) {
 	<a href={ templ.SafeURL(url) }>
 		<li class="flex gap-2 rounded px-2 py-1 transition hover:bg-sky-900 active:scale-90">
 			{ children... }
