--- a/web/v2/ui/pages/invoices.templ
+++ b/web/v2/ui/pages/invoices.templ
@@ -11,7 +11,7 @@ templ InvoicesPage(invoices []*models.Invoice) {
 			<a href="/invoices/create" hx-boost="true">
 				@shared.SuccessButton("sm") {
 					@shared.Icon("file-plus")
-					<span>Emitir NFA</span>
+					<span>Emitir Nota Fiscal</span>
 				}
 			</a>
 		</div>
