--- a/web/v2/ui/shared/icon.templ
+++ b/web/v2/ui/shared/icon.templ
@@ -14,5 +14,13 @@ templ IconXs(name string) {
 
 
 templ LoadingIcon() {
-	<i data-feather="loader" class="hx-indicator animate-spin text-5xl opacity-70"></i>
+	<i data-feather="loader" class="hx-indicator animate-spin opacity-70"></i>
+}
+
+templ LoadingIconSm() {
+	<i data-feather="loader" class="hx-indicator h-5 w-5 animate-spin opacity-70"></i>
+}
+
+templ LoadingIconXs() {
+	<i data-feather="loader" class="hx-indicator h-4 w-4 animate-spin opacity-70"></i>
 }
