--- a/web/v2/ui/shared/button.templ
+++ b/web/v2/ui/shared/button.templ
@@ -49,7 +49,7 @@ templ DefaultButtonOutline(size string) {
 }
 
 func getButtonClassesByTheme(theme string, size string) string {
-	classes := "flex w-full border items-center justify-center rounded gap-3"
+	classes := "flex w-full transition border items-center justify-center rounded gap-3"
 
 	colors := ""
 	padding := ""
