--- a/web/v2/ui/components/invoices.templ
+++ b/web/v2/ui/components/invoices.templ
@@ -80,7 +80,7 @@ templ InvoiceCard(i *models.Invoice) {
 }
 
 templ InvoiceDetails(i *models.Invoice) {
-	<dialog id={ invoiceDetailsID(i) } class="rounded sm:w-10/12 md:w-9/12 lg:w-7/12 xl:w-6/12 2xl:w-5/12">
+	<dialog id={ invoiceDetailsID(i) } class="w-full rounded sm:w-10/12 md:w-9/12 lg:w-7/12 xl:w-6/12 2xl:w-5/12">
 		<div class="rounded border border-gray-200 p-2 shadow shadow-gray-300">
 			<div class="relative rounded border border-gray-300 p-2">
 				<h3 class="flex items-center gap-2 break-words rounded text-base font-bold">
@@ -93,6 +93,11 @@ templ InvoiceDetails(i *models.Invoice) {
 					@shared.Icon("x-circle")
 				</div>
 			</div>
+			if i.ReqStatus != "pending" {
+				<div class="border-b p-2 text-base">
+					<pre>{ i.ReqMsg }</pre>
+				</div>
+			}
 			<ul class="grid gap-2 p-2 sm:grid-cols-2">
 				<li><span class="font-medium">Número:</span> { i.Number }</li>
 				<li><span class="font-medium">Protocolo:</span> { i.Protocol }</li>
@@ -107,10 +112,66 @@ templ InvoiceDetails(i *models.Invoice) {
 				<li><span class="font-medium">Adicionar Frete ao Total:</span> { i.AddShippingToTotal } </li>
 				<li><span class="font-medium">GTA:</span> { i.Gta } </li>
 				<li><span class="font-medium">Nome do Arquivo:</span> { i.FileName } </li>
-				<li><span class="font-medium">Quantidade de Itens:</span> { strconv.Itoa(len(i.Items)) } </li>
 			</ul>
+			@InvoiceItemsDetails(i)
 		</div>
 	</dialog>
+}
+
+templ InvoiceItemsDetails(i *models.Invoice) {
+	<div id={ invoiceItemsDetailsID(i) }>
+		<div class="mt-2 border-t p-2">
+			<h4 class="flex items-center justify-between text-lg">
+				<span>Produtos</span>
+				if len(i.Items) != 0 {
+					<div class="flex gap-2 px-2">
+						<span class="text-base font-medium">Total:</span>
+						<span class="text-base">{ strconv.Itoa(len(i.Items)) }</span>
+					</div>
+				}
+			</h4>
+			if len(i.Items) == 0 {
+				<div
+					class="mt-2"
+					hx-trigger="click"
+					hx-get={ fmt.Sprintf("/invoices/%d/items-details", i.ID) }
+					hx-target={ invoiceItemsDetailsTarget(i) }
+					hx-swap="outerHTML"
+				>
+					@shared.DefaultButtonOutline("xs") {
+						<span>Carregar dados dos produtos</span>
+					}
+				</div>
+			}
+		</div>
+		<div class="flex flex-col gap-4">
+			for _, item := range i.Items {
+				<ul class="flex flex-col gap-4 rounded border p-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
+					<li class="sm:w-1/2 sm:pr-2">
+						<strong>Grupo</strong>: <span>{ item.Group } </span>
+					</li>
+					<li class="sm:w-1/2 sm:pl-2">
+						<strong>NCM</strong>: <span>{ item.NCM } </span>
+					</li>
+					<li class="sm:w-1/2 sm:pr-2">
+						<strong>Descrição</strong>: <span>{ item.Description } </span>
+					</li>
+					<li class="sm:w-1/2 sm:pl-2">
+						<strong>Quantidade</strong>: <span>{ utils.Float64ToString(item.Quantity) } </span>
+					</li>
+					<li class="sm:w-1/2 sm:pr-2">
+						<strong>Valor Unitário</strong>: <span>{ utils.Float64ToString(item.ValuePerUnity) } </span>
+					</li>
+					<li class="sm:w-1/2 sm:pl-2">
+						<strong>Origem</strong>: <span>{ item.Origin } </span>
+					</li>
+					<li class="sm:w-1/2">
+						<strong>Unidade de medida</strong>: <span>{ item.UnityOfMeasurement } </span>
+					</li>
+				</ul>
+			}
+		</div>
+	</div>
 }
 
 func invoiceCardID(i *models.Invoice) string {
@@ -123,4 +184,12 @@ func invoiceDetailsID(i *models.Invoice) string {
 
 func invoiceDetailsTarget(i *models.Invoice) string {
 	return fmt.Sprintf("#invoice-details-%d", i.ID)
+}
+
+func invoiceItemsDetailsID(i *models.Invoice) string {
+	return fmt.Sprintf("invoice-items-details-%d", i.ID)
+}
+
+func invoiceItemsDetailsTarget(i *models.Invoice) string {
+	return fmt.Sprintf("#invoice-items-details-%d", i.ID)
 }
