--- a/web/v2/ui/components/invoices.templ
+++ b/web/v2/ui/components/invoices.templ
@@ -54,7 +54,7 @@ templ InvoiceCard(i *models.Invoice) {
 			<li class="md:truncate"><span class="font-medium">Destinatário:</span> { i.Recipient.Name }</li>
 		</ul>
 		<div class="grid grid-cols-6 gap-2 p-2 sm:absolute sm:bottom-2 sm:right-2 sm:grid-cols-2 sm:p-0">
-			<div onclick={ scripts.OpenDialog(invoiceDetailsTarget(i)) } title="Ver detalhes">
+			<div onclick={ scripts.OpenDialogWithEvent(invoiceDetailsTarget(i), invoiceItemsEvent(i)) } title="Ver detalhes">
 				@shared.WarningButton("xs") {
 					@shared.IconSm("eye")
 				}
@@ -133,40 +133,44 @@ templ InvoiceItemsDetails(i *models.Invoice) {
 			if len(i.Items) == 0 {
 				<div
 					class="mt-2"
-					hx-trigger="click"
+					hx-trigger={ fmt.Sprintf("click, %s from:document", invoiceItemsEvent(i)) }
 					hx-get={ fmt.Sprintf("/invoices/%d/items-details", i.ID) }
 					hx-target={ invoiceItemsDetailsTarget(i) }
 					hx-swap="outerHTML"
+					hx-indicator={ loadInvoiceItemsIndicatorTarget(i) }
 				>
 					@shared.DefaultButtonOutline("xs") {
+						<span id={ loadInvoiceItemsIndicatorID(i) }>
+							@shared.LoadingIconSm()
+						</span>
 						<span>Carregar dados dos produtos</span>
 					}
 				</div>
 			}
 		</div>
-		<div class="flex flex-col gap-4">
+		<div class="grid grid-cols-1 gap-2">
 			for _, item := range i.Items {
-				<ul class="flex flex-col gap-4 rounded border p-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
-					<li class="sm:w-1/2 sm:pr-2">
-						<strong>Grupo</strong>: <span>{ item.Group } </span>
+				<ul class="grid grid-cols-1 gap-2 rounded border p-4 sm:grid-cols-2">
+					<li>
+						<strong class="font-medium">Grupo</strong>: <span>{ item.Group } </span>
 					</li>
-					<li class="sm:w-1/2 sm:pl-2">
-						<strong>NCM</strong>: <span>{ item.NCM } </span>
+					<li>
+						<strong class="font-medium">NCM</strong>: <span>{ item.NCM } </span>
 					</li>
-					<li class="sm:w-1/2 sm:pr-2">
-						<strong>Descrição</strong>: <span>{ item.Description } </span>
+					<li>
+						<strong class="font-medium">Descrição</strong>: <span>{ item.Description } </span>
 					</li>
-					<li class="sm:w-1/2 sm:pl-2">
-						<strong>Quantidade</strong>: <span>{ utils.Float64ToString(item.Quantity) } </span>
+					<li>
+						<strong class="font-medium">Quantidade</strong>: <span>{ utils.Float64ToString(item.Quantity) } </span>
 					</li>
-					<li class="sm:w-1/2 sm:pr-2">
-						<strong>Valor Unitário</strong>: <span>{ utils.Float64ToString(item.ValuePerUnity) } </span>
+					<li>
+						<strong class="font-medium">Valor Unitário</strong>: <span>{ utils.Float64ToString(item.ValuePerUnity) } </span>
 					</li>
-					<li class="sm:w-1/2 sm:pl-2">
-						<strong>Origem</strong>: <span>{ item.Origin } </span>
+					<li>
+						<strong class="font-medium">Origem</strong>: <span>{ item.Origin } </span>
 					</li>
-					<li class="sm:w-1/2">
-						<strong>Unidade de medida</strong>: <span>{ item.UnityOfMeasurement } </span>
+					<li>
+						<strong class="font-medium">Unidade de medida</strong>: <span>{ item.UnityOfMeasurement } </span>
 					</li>
 				</ul>
 			}
@@ -192,4 +196,16 @@ func invoiceItemsDetailsID(i *models.Invoice) string {
 
 func invoiceItemsDetailsTarget(i *models.Invoice) string {
 	return fmt.Sprintf("#invoice-items-details-%d", i.ID)
+}
+
+func invoiceItemsEvent(i *models.Invoice) string {
+	return fmt.Sprintf("load-items-%d", i.ID)
+}
+
+func loadInvoiceItemsIndicatorID(i *models.Invoice) string {
+	return fmt.Sprintf("invoice-items-indicator-%d", i.ID)
+}
+
+func loadInvoiceItemsIndicatorTarget(i *models.Invoice) string {
+	return fmt.Sprintf("#invoice-items-indicator-%d", i.ID)
 }
