--- a/web/v2/ui/scripts/dialog.templ
+++ b/web/v2/ui/scripts/dialog.templ
@@ -1,6 +1,6 @@
 package scripts
 
-script OpenDialog(target string) {
+script OpenDialog(target string, events ...string) {
 	const dialog = document.querySelector(target)	
 	if (dialog) {
 		dialog.showModal()
@@ -11,5 +11,16 @@ script CloseDialog(target string) {
 	const dialog = document.querySelector(target)	
 	if (dialog) {
 		dialog.close()
+	}
+}
+
+script OpenDialogWithEvent(target string, events ...string) {
+	const dialog = document.querySelector(target)	
+	if (dialog) {
+		dialog.showModal()
+	}
+
+	for (let evt of events) {
+		document.dispatchEvent(new CustomEvent(evt))
 	}
 }
