--- a/web/v2/ui/shared/nav.templ
+++ b/web/v2/ui/shared/nav.templ
@@ -59,7 +59,7 @@ templ ListMenu() {
 }
 
 templ MenuItem(url string) {
-	<a href={ templ.SafeURL(url) }>
+	<a href={ templ.URL(url) }>
 		<li class="flex h-full w-full flex-1 cursor-pointer items-center justify-center gap-2 rounded px-2 py-1 transition hover:bg-sky-800 active:scale-95">
 			{ children... }
 		</li>
@@ -79,7 +79,7 @@ templ SubMenu(labelIcon, labelText string) {
 }
 
 templ SubMenuItem(url string) {
-	<a href={ templ.SafeURL(url) }>
+	<a href={ templ.URL(url) }>
 		<li class="flex gap-2 rounded px-2 py-1 transition hover:bg-sky-900 active:scale-90">
 			{ children... }
 		</li>
