feat: canceling confirmation dialog for invoices

--- a/web/v2/ui/components/entities.templ
+++ b/web/v2/ui/components/entities.templ
@@ -89,7 +89,7 @@ templ DeleteConfirmationDialog(e *models.Entity) {
 				</div>
 				<div onclick={ scripts.CloseDialog(deleteConfirmationDialogTarget(e)) }>
 					@shared.DefaultButton("md") {
-						Cancelar
+						Não
 					}
 				</div>
 			</div>
