--- a/web/v2/ui/components/invoices.templ
+++ b/web/v2/ui/components/invoices.templ
@@ -21,22 +21,27 @@ templ InvoiceStatus(i *models.Invoice) {
 			<div class="text-green-600">
 				@shared.Icon("check-circle")
 			</div>
-			<span>Sucesso</span>
+			<span class="text-green-700">Sucesso</span>
 		case "warning":
 			<div class="text-yellow-600">
 				@shared.Icon("alert-triangle")
 			</div>
-			<span>Aviso</span>
+			<span class="text-yellow-700">Aviso</span>
 		case "error":
 			<div class="text-red-600">
 				@shared.Icon("x-circle")
 			</div>
-			<span>Erro </span>
+			<span class="text-red-700">Erro</span>
+		case "canceled":
+			<div class="text-gray-500">
+				@shared.Icon("slash")
+			</div>
+			<span class="text-gray-600">Cancelada</span>
 		default:
 			<div class="animate-spin-slow text-sky-600">
 				@shared.Icon("loader")
 			</div>
-			<span>Em andamento... </span>
+			<span>Em andamento...</span>
 	}
 }
 
@@ -54,7 +59,7 @@ templ InvoiceCard(i *models.Invoice) {
 			<li class="md:truncate"><span class="font-medium">Destinatário:</span> { i.Recipient.Name }</li>
 		</ul>
 		<div class="grid grid-cols-6 gap-2 p-2 sm:absolute sm:bottom-2 sm:right-2 sm:grid-cols-2 sm:p-0">
-			<div onclick={ scripts.OpenDialogWithEvent(invoiceDetailsTarget(i), invoiceItemsEvent(i)) } title="Ver detalhes">
+			<div onclick={ scripts.OpenDialogWithEvent(invoiceDetailsDialogTarget(i), invoiceItemsEventName(i)) } title="Ver detalhes">
 				@shared.WarningButton("xs") {
 					@shared.IconSm("eye")
 				}
@@ -78,18 +83,19 @@ templ InvoiceCard(i *models.Invoice) {
 					@shared.IconSm("download-cloud")
 				}
 			</a>
-			<div title="Cancelar NFA">
+			<div onclick={ scripts.OpenDialog(cancelingConfirmationDialogTarget(i)) } title="Cancelar NFA">
 				@shared.ErrorButton("xs") {
 					@shared.IconSm("slash")
 				}
 			</div>
 		</div>
-		@InvoiceDetails(i)
+		@InvoiceDetailsDialog(i)
+		@CancelingConfirmationDialog(i)
 	</li>
 }
 
-templ InvoiceDetails(i *models.Invoice) {
-	<dialog id={ invoiceDetailsID(i) } class="w-full rounded sm:w-10/12 md:w-9/12 lg:w-7/12 xl:w-6/12 2xl:w-5/12">
+templ InvoiceDetailsDialog(i *models.Invoice) {
+	<dialog id={ invoiceDetailsDialogID(i) } class="w-full rounded sm:w-10/12 md:w-9/12 lg:w-7/12 xl:w-6/12 2xl:w-5/12">
 		<div class="rounded border border-gray-200 p-2 shadow shadow-gray-300">
 			<div class="relative rounded border border-gray-300 p-2">
 				<h3 class="flex items-center gap-2 break-words rounded text-base font-bold">
@@ -97,7 +103,7 @@ templ InvoiceDetails(i *models.Invoice) {
 				</h3>
 				<div
 					class="absolute -right-2 -top-2 rounded-full bg-white pb-1 pl-1 transition hover:bg-gray-100 active:bg-gray-200 sm:p-1"
-					onclick={ scripts.CloseDialog(invoiceDetailsTarget(i)) }
+					onclick={ scripts.CloseDialog(invoiceDetailsDialogTarget(i)) }
 				>
 					@shared.Icon("x-circle")
 				</div>
@@ -142,7 +148,7 @@ templ InvoiceItemsDetails(i *models.Invoice) {
 			if len(i.Items) == 0 {
 				<div
 					class="mt-2"
-					hx-trigger={ fmt.Sprintf("click, %s from:document", invoiceItemsEvent(i)) }
+					hx-trigger={ fmt.Sprintf("click, %s from:document", invoiceItemsEventName(i)) }
 					hx-get={ fmt.Sprintf("/invoices/%d/items-details", i.ID) }
 					hx-target={ invoiceItemsDetailsTarget(i) }
 					hx-swap="outerHTML"
@@ -187,15 +193,36 @@ templ InvoiceItemsDetails(i *models.Invoice) {
 	</div>
 }
 
+templ CancelingConfirmationDialog(i *models.Invoice) {
+	<dialog id={ cancelingConfirmationDialogID(i) } class="rounded sm:w-3/4 md:w-3/5 lg:w-1/2 xl:w-1/3 2xl:w-1/4">
+		<div class="rounded border border-gray-200 p-4 shadow shadow-gray-300">
+			<h3 class="text-center text-xl font-bold">Quer mesmo cancelar a nota fiscal?</h3>
+			<p class="pb-4 pt-2 text-center text-sm text-gray-700">Isso irá iniciar uma operação de cancelamento de NFA no Siare.</p>
+			<div class="grid grid-cols-2 gap-2">
+				<div hx-post={ fmt.Sprintf("/invoices/cancel/%d", i.ID) }>
+					@shared.ErrorButton("md") {
+						Sim
+					}
+				</div>
+				<div onclick={ scripts.CloseDialog(cancelingConfirmationDialogTarget(i)) }>
+					@shared.DefaultButton("md") {
+						Não
+					}
+				</div>
+			</div>
+		</div>
+	</dialog>
+}
+
 func invoiceCardID(i *models.Invoice) string {
 	return fmt.Sprintf("invoice-card-%d", i.ID)
 }
 
-func invoiceDetailsID(i *models.Invoice) string {
+func invoiceDetailsDialogID(i *models.Invoice) string {
 	return fmt.Sprintf("invoice-details-%d", i.ID)
 }
 
-func invoiceDetailsTarget(i *models.Invoice) string {
+func invoiceDetailsDialogTarget(i *models.Invoice) string {
 	return fmt.Sprintf("#invoice-details-%d", i.ID)
 }
 
@@ -207,7 +234,7 @@ func invoiceItemsDetailsTarget(i *models.Invoice) string {
 	return fmt.Sprintf("#invoice-items-details-%d", i.ID)
 }
 
-func invoiceItemsEvent(i *models.Invoice) string {
+func invoiceItemsEventName(i *models.Invoice) string {
 	return fmt.Sprintf("load-items-%d", i.ID)
 }
 
@@ -217,4 +244,12 @@ func loadInvoiceItemsIndicatorID(i *models.Invoice) string {
 
 func loadInvoiceItemsIndicatorTarget(i *models.Invoice) string {
 	return fmt.Sprintf("#invoice-items-indicator-%d", i.ID)
+}
+
+func cancelingConfirmationDialogID(i *models.Invoice) string {
+	return fmt.Sprintf("canceling-confirmation-dialog-%d", i.ID)
+}
+
+func cancelingConfirmationDialogTarget(i *models.Invoice) string {
+	return fmt.Sprintf("#canceling-confirmation-dialog-%d", i.ID)
 }
