feat: cancel invoice form sketch

--- a/web/v2/ui/pages/invoices.templ
+++ b/web/v2/ui/pages/invoices.templ
@@ -15,7 +15,7 @@ templ InvoicesPage(invoices []*models.Invoice) {
 				}
 			</a>
 		</div>
-		<h2 class="text-base font-medium">Histórico de Requerimentos</h2>
+		<h2 class="text-base font-medium">Histórico de Operações</h2>
 		@components.InvoiceList(invoices)
 	</div>
 }
