--- a/web/v2/ui/forms/invoices-cancel.templ
+++ b/web/v2/ui/forms/invoices-cancel.templ
@@ -5,7 +5,13 @@ import "github.com/cayo-rodrigues/nff/web/ui/shared"
 import "strconv"
 
 templ CancelInvoiceForm(c *models.InvoiceCancel, entities []*models.Entity) {
-	<form id="cancel-invoice-form" class="flex flex-col gap-4 transition-all">
+	<form
+		id="cancel-invoice-form"
+		class="flex flex-col gap-4"
+		hx-post="/invoices/cancel"
+		hx-target="this"
+		hx-swap="outerHTML"
+	>
 		<div class="md:w-fit">
 			@shared.SubmitButton("sm") {
 				@shared.Icon("play-circle")
@@ -27,10 +33,11 @@ templ CancelInvoiceForm(c *models.InvoiceCancel, entities []*models.Entity) {
 				ErrMsg: c.Errors["InvoiceNumber"],
 			})
 			@shared.Input(&shared.InputData{
-				ID:     "year",
-				Label:  "Ano",
-				Value:  strconv.Itoa(c.Year),
-				ErrMsg: c.Errors["Year"],
+				ID:        "year",
+				InputType: "number",
+				Label:     "Ano",
+				Value:     strconv.Itoa(c.Year),
+				ErrMsg:    c.Errors["Year"],
 			})
 			@shared.Input(&shared.InputData{
 				ID:     "justification",
@@ -40,11 +47,4 @@ templ CancelInvoiceForm(c *models.InvoiceCancel, entities []*models.Entity) {
 			})
 		</div>
 	</form>
-	<div class="-mb-2 mt-4 flex justify-center border-t sm:-mb-6">
-		<div onclick="ToggleForm('#cancel-invoice-form', this)" class="w-fit -translate-y-3 transform bg-gray-50 px-2">
-			@shared.DefaultButtonOutline("xs") {
-				@shared.IconXs("chevron-up")
-			}
-		</div>
-	</div>
 }
