--- a/web/v2/ui/pages/invoices-cancel.templ
+++ b/web/v2/ui/pages/invoices-cancel.templ
@@ -3,11 +3,13 @@ package pages
 import "github.com/cayo-rodrigues/nff/web/ui/components"
 import "github.com/cayo-rodrigues/nff/web/models"
 import "github.com/cayo-rodrigues/nff/web/ui/forms"
+import "github.com/cayo-rodrigues/nff/web/ui/shared"
 
 templ InvoicesCancelingsPage(cancelingsList []*models.InvoiceCancel, cancelingForForm *models.InvoiceCancel, entities []*models.Entity) {
 	<div class="flex flex-col gap-4">
 		<div class="flex flex-col gap-2">
 			@forms.CancelInvoiceForm(cancelingForForm, entities)
+			@shared.ToggleElementVisibilityButton("#cancel-invoice-form")
 		</div>
 		<h2 class="text-base font-medium">Histórico de Operações</h2>
 		@components.InvoicesCancelingsList(cancelingsList)
