--- a/web/v2/ui/pages/invoices-print.templ
+++ b/web/v2/ui/pages/invoices-print.templ
@@ -1,5 +1,17 @@
 package pages
 
-templ InvoicesPrintPage() {
+import "github.com/cayo-rodrigues/nff/web/ui/components"
+import "github.com/cayo-rodrigues/nff/web/models"
+import "github.com/cayo-rodrigues/nff/web/ui/forms"
+import "github.com/cayo-rodrigues/nff/web/ui/shared"
 
+templ InvoicesPrintPage(printingsList []*models.InvoicePrint, printingForForm *models.InvoicePrint, entities []*models.Entity) {
+	<div class="flex flex-col gap-4">
+		<div class="flex flex-col gap-2">
+			@forms.PrintInvoiceForm(printingForForm, entities)
+			@shared.ToggleElementVisibilityButton("#print-invoice-form")
+		</div>
+		<h2 class="text-base font-medium">Histórico de Operações</h2>
+		@components.InvoicesPrintingsList(printingsList)
+	</div>
 }
