--- a/web/v2/ui/forms/invoices.templ
+++ b/web/v2/ui/forms/invoices.templ
@@ -112,7 +112,7 @@ templ InvoiceForm(i *models.Invoice, entities []*models.Entity) {
 			})
 			@shared.Input(&shared.InputData{
 				ID:     "custom_file_name_prefix",
-				Label:  "Nome do Arquivo",
+				Label:  "Prefixo do Nome do Arquivo",
 				Value:  i.CustomFileNamePrefix,
 				ErrMsg: i.Errors["CustomFileNamePrefix"],
 			})
