--- a/web/v2/ui/shared/input.templ
+++ b/web/v2/ui/shared/input.templ
@@ -33,6 +33,10 @@ templ WideInput(data *InputData) {
 	@Input(data.Wide())
 }
 
+templ WideSelectInput(data *InputData) {
+	@SelectInput(data.Wide())
+}
+
 templ Input(data *InputData) {
 	<div
 		if data.Class != "" {
@@ -68,7 +72,13 @@ templ Input(data *InputData) {
 }
 
 templ SelectInput(data *InputData) {
-	<div class="flex flex-col gap-2">
+	<div
+		if data.Class != "" {
+			class={ data.Class }
+		} else {
+			class="flex flex-col gap-2"
+		}
+	>
 		<label class="flex items-center gap-2 truncate" for={ data.ID }>
 			<strong>{ data.Label }</strong>
 			if data.HxIndicatorID != "" {
