--- a/web/v2/ui/shared/toggle.templ
+++ b/web/v2/ui/shared/toggle.templ
@@ -1,42 +1,15 @@
 package shared
 
+import "github.com/cayo-rodrigues/nff/web/ui/scripts"
+
 templ ToggleElementVisibilityButton(target string) {
 	<div class="-mb-2 mt-4 flex justify-center border-t sm:-mb-6">
 		<div class="w-fit -translate-y-3 transform bg-gray-50 px-2">
-			<div id="toggle-btn" onclick={ PerformToggle(target, "#toggle-btn svg") }>
+			<div id="toggle-btn" onclick={ scripts.ToggleVerticalDrawer(target, "#toggle-btn svg") }>
 				@DefaultButtonOutline("xs") {
 					@IconXs("chevron-up")
 				}
 			</div>
 		</div>
 	</div>
-}
-
-script PerformToggle(elementTarget, btnIconTarget string) {
-    const elem = document.querySelector(elementTarget)
-    const icon = document.querySelector(btnIconTarget)
-
-    elem.classList.add('transition-all', 'duration-300')
-    icon.classList.add('transition-all', 'duration-300')
-
-    if (elem.classList.contains('hidden')) {
-        elem.classList.remove('hidden')
-
-        setTimeout(() => {
-            elem.style.marginTop = '-0px'
-            elem.style.opacity = 100
-            icon.classList.remove('transform', 'rotate-180')
-        }, 0)
-
-        return
-    }
-
-    const inputGap2 = 8
-    elem.style.marginTop = `-${elem.offsetHeight + inputGap2}px`
-    elem.style.opacity = 0
-    icon.classList.add('transform', 'rotate-180')
-
-    setTimeout(() => {
-        elem.classList.add('hidden')
-    }, 300)
 }
